--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,14 +29,15 @@ body {
 }
 
 h1 {
+  @apply text-4xl md:text-5xl lg:text-6xl;
   font-family: var(--font-lato);
   font-weight: 700;
-  font-size: 48px;
 
   margin-bottom: 16px;
 }
 
 h2 {
+  @apply text-2xl md:text-3xl lg:text-4xl;
   font-family: var(--font-lato);
   font-weight: 400;
   font-size: 24px;
@@ -45,9 +46,9 @@ h2 {
 }
 
 p {
+  @apply text-base md:text-lg lg:text-xl;
   font-family: var(--font-open-sans);
   font-weight: 400;
-  font-size: 16px;
 
   line-height: 1.6;
 
@@ -55,10 +56,16 @@ p {
   margin-bottom: 32px;
 }
 
+a {
+  @apply text-base md:text-lg lg:text-xl;
+  font-family: var(--font-open-sans);
+  font-weight: 400;
+}
+
 .button-inward {
+  @apply text-base md:text-lg lg:text-xl;
   font-family: var(--font-lato);
   font-weight: 700;
-  font-size: 16px;
 
   background: var(--color-primary);
   color: var(--color-background);
@@ -70,9 +77,9 @@ p {
 }
 
 .button-outward {
+  @apply text-base md:text-lg lg:text-xl;
   font-family: var(--font-lato);
   font-weight: 700;
-  font-size: 16px;
 
   color: var(--color-text);
 
@@ -86,16 +93,18 @@ p {
 
 /* Styling for ordered lists */
 ol {
+  @apply text-[12px] lg:text-[16px];
+
   font-family: var(--font-open-sans);
   font-weight: 400;
-  font-size: 16px;
   line-height: 1.6;
 }
 
 /* Styling for list items */
 li {
+  @apply text-[12px] lg:text-[16px];
+
   font-family: var(--font-open-sans);
   font-weight: 400;
-  font-size: 16px;
   line-height: 1.6;
 }
