--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,6 +62,18 @@ a {
   font-weight: 400;
 }
 
+.nav-text {
+  @apply px-3 py-2 text-sm md:text-base lg:text-lg;
+  font-family: var(--font-open-sans);
+  font-weight: 400;
+}
+
+.nav-text-mobile {
+  @apply border-b-[1px] border-b-[var(--color-accent)] px-3 py-4 text-lg;
+  font-family: var(--font-open-sans);
+  font-weight: 400;
+}
+
 .button-inward {
   @apply text-base md:text-lg lg:text-xl;
   font-family: var(--font-lato);
