--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,7 +69,7 @@ a {
 }
 
 .nav-text-mobile {
-  @apply border-b-[1px] border-b-[var(--color-accent)] px-3 py-4 text-lg;
+  @apply border-b-[1px] border-b-[var(--color-accent)] px-8 py-4 text-lg first:border-t-[1px] first:border-t-[var(--color-accent)];
   font-family: var(--font-open-sans);
   font-weight: 400;
 }
